<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_top_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/statebar"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="44dp"
                android:scaleType="centerInside"
                android:id="@+id/about_menu"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:singleLine="true"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_help"
                android:scaleType="centerCrop"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="50dp"
            android:visibility="gone"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/app_name"
                android:textColor="@color/font_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="V1.0.Rel.47"
                android:textColor="@color/font_light_green"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdgeLength="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/shape_topround_white"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:textSize="13sp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:drawablePadding="12dp"
                    android:text="@string/feedback"
                    android:id="@+id/about_feedback"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_green"
                    android:drawableTop="@mipmap/ic_feedback"/>

                <View
                    android:layout_width="1px"
                    android:background="@color/gray"
                    android:layout_height="match_parent"/>

                <TextView
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:id="@+id/about_help"
                    android:drawablePadding="8dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_green"
                    android:text="@string/helpustranslate"
                    android:drawableTop="@mipmap/ic_helper" />

                <View
                    android:layout_width="1px"
                    android:background="@color/gray"
                    android:layout_height="match_parent"/>

                <TextView
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:drawablePadding="8dp"
                    android:id="@+id/about_privacy"
                    android:text="@string/privacypolicy"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_green"
                    android:drawableTop="@mipmap/ic_privacy"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="1px"/>

            <LinearLayout
                android:background="@drawable/shape_bottomround_white"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:text="@string/update"
                    android:drawablePadding="8dp"
                    android:id="@+id/about_update"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_green"
                    android:drawableTop="@mipmap/ic_update"/>

                <View
                    android:layout_width="1px"
                    android:background="@color/gray"
                    android:layout_height="match_parent"/>

                <TextView
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:id="@+id/about_share"
                    android:drawablePadding="8dp"
                    android:text="@string/sharetofriends"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_green"
                    android:drawableTop="@mipmap/ic_share"/>

                <View
                    android:layout_width="1px"
                    android:background="@color/gray"
                    android:layout_height="match_parent"/>

                <TextView
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:drawablePadding="8dp"
                    android:id="@+id/about_rate"
                    android:text="@string/rate5stars"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_green"
                    android:drawableTop="@mipmap/ic_rate"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>