<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="#00ffffff">

    <LinearLayout
        android:background="@mipmap/dialog_bg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="38dp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="77dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_waring"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:textColor="#ff000000"
                android:textStyle="bold"
                android:text="@string/reminder"
                android:textSize="24sp"/>
        </LinearLayout>

        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:id="@+id/tv_count"
            android:textColor="#333333"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remindernote"/>

        <ImageView
            android:scaleType="fitCenter"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_point_line"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:id="@+id/recyclerview"
            android:fadingEdgeLength="0dp"
            android:fadingEdge="none"
            android:padding="6dp"/>

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="bottom">

            <TextView
                android:textSize="25sp"
                android:paddingTop="12dp"
                android:singleLine="true"
                android:id="@+id/btn_open"
                android:paddingBottom="12dp"
                android:text="@string/startapp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/white"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_dialog_green_btn"/>

            <TextView
                android:text="1"
                android:textSize="13sp"
                android:minWidth="26dp"
                android:gravity="center"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:layout_height="26dp"
                android:textColor="@color/white"
                android:layout_marginRight="12dp"
                android:layout_gravity="top|right"
                android:layout_width="wrap_content"
                android:background="@drawable/shape_red_point"/>
        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/dialog_icon"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/closeicon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_close"
        android:layout_marginTop="26dp"
        android:layout_marginRight="6dp"
        android:layout_alignParentRight="true"/>
</RelativeLayout>