<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/common_green_bg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:minHeight="240dp">

        <LinearLayout
            android:paddingTop="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <View
                android:id="@+id/statebar"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_width="44dp"
                android:scaleType="centerInside"
                android:id="@+id/clean_menu"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_back"/>

            <TextView
                android:text="@string/cleansm"
                android:textSize="22sp"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_marginRight="12dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"/>

            <ImageView
                android:visibility="invisible"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_help"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_fileName="data.json"
                android:id="@+id/clean_lottieview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:text="8.65"
                android:textSize="44sp"
                android:gravity="center"
                android:singleLine="true"
                android:visibility="gone"
                android:id="@+id/cleanpercent"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/cleanpercentunityall"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="6dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:text="MB"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cleanpercentunity"/>

                <TextView
                    android:text="@string/found"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:textSize="15sp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:text="@string/selectapps"
            android:paddingBottom="8dp"
            android:id="@+id/clean_note"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableRight="@mipmap/icon_intopage"/>

        <androidx.recyclerview.widget.RecyclerView
            android:padding="6dp"
            android:fadingEdge="none"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadingEdgeLength="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:id="@+id/clean_recyclerview"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/item_whiteuser"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/clean_btn"
            app:layout_constraintTop_toBottomOf="@id/clean_note"/>

        <TextView
            android:enabled="false"
            android:textSize="22sp"
            android:gravity="center"
            android:id="@+id/clean_btn"
            android:paddingTop="12dp"
            android:textStyle="normal"
            android:layout_width="0dp"
            android:textColor="#ffffff"
            android:paddingBottom="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="Just a moment, please"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/common_bottom_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clean_recyclerview"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>